# VoiceType

./: .gitignore  LICENSE  README.md  README.uk.md  build_installer.bat  config.example.yaml  installer.iss  pyproject.toml  requirements.txt  setup.bat
scripts/: build_icon.py  create_shortcut.py  lint.sh  run.py  translate.py
voicetype/: __init__.py  about_window.py  config.py  i18n.py  input_handler.py  llm_client.py  main.py  model_manager.py  notifier.py  postprocessor.py  recorder.py  settings_window.py  transcriber.py  vad.py
